{
  "ButtonAdd": "Add",
  "ButtonAddNewServer": "Add New Server",
  "ButtonAuthors": "Authors",
  "ButtonBack": "Back",
  "ButtonCancel": "Cancel",
  "ButtonCancelTimer": "Cancel Timer",
  "ButtonClearFilter": "Clear Filter",
  "ButtonClearLogs": "Clear Logs",
  "ButtonCloseFeed": "Close Feed",
  "ButtonCollections": "Collections",
  "ButtonConnect": "Connect",
  "ButtonConnectToServer": "Connect to Server",
...
  "ButtonDeleteLocalFile": "Delete local file",
  "ButtonDeleteLocalItem": "Delete local item",
  "ButtonDisableAutoTimer": "Disable Auto Timer",
  "ButtonDisconnect": "Disconnect",
  "ButtonGoToWebClient": "Go to Web Client",
  "ButtonHistory": "History",
  "ButtonHome": "Home",
  "ButtonIssues": "Issues",
  "ButtonLatest": "Latest",
  "ButtonLibrary": "Library",
  "ButtonLocalMedia": "Local Media",
  "ButtonLogs": "Logs",
  "ButtonManageLocalFiles": "Manage Local Files",
...
  "LabelDisableAutoRewind": "Disable auto rewind",
  "LabelDisableShakeToReset": "Disable shake to reset",
  "LabelDisableShakeToResetHelp": "Shaking your device while the timer is running OR within 2 minutes of the timer expiring will reset the sleep timer. Enable this setting to disable shake to reset.",
  "LabelDisableVibrateOnReset": "Disable vibrate on reset",
  "LabelDisableVibrateOnResetHelp": "When the sleep timer gets reset your device will vibrate. Enable this setting to not vibrate when the sleep timer resets.",
  "LabelDiscover": "Discover",
  "LabelDownload": "Download",
  "LabelDownloadUsingCellular": "Download using Cellular",
  "LabelDownloaded": "Downloaded",
  "LabelDuration": "Duration",
  "LabelEbook": "Ebook",
  "LabelEbooks": "Ebooks",
  "LabelEnable": "Enable",
...
